fix: register migrations

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
   "autoload": {
     "psr-4": {
       "Munio\\FilamentEvents\\": "src/",
-      "Munio\\FilamentEvents\\Database\\Factories\\": "database/factories/",
-      "Munio\\FilamentEvents\\Database\\Migrations\\": "database/migrations/"
+      "Munio\\FilamentEvents\\Database\\Factories\\": "database/factories/"
     }
   },
   "autoload-dev": {
